--- a/.config/i3/config
+++ b/.config/i3/config
@@ -204,11 +204,10 @@ client.background       #212121
 # Window rules
 for_window [class=".*"] border pixel 3
 
-# Gaps
-smart_gaps on
-smart_gaps inverse_outer
-gaps inner 8
-gaps outer 2
+#smart_gaps on
+#smart_gaps inverse_outer
+#gaps inner 8
+#gaps outer 2
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
