--- a/.config/i3/config
+++ b/.config/i3/config
@@ -221,7 +221,7 @@ for_window [class=".*"] border pixel 3
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command          i3blocks
+    status_command          i3bar
     bindsym button4         nop
     bindsym button5         nop
     position                bottom
