Added some keyboard shortcuts and appearance

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind ^T last-pane
+
 # Windows
 set -g base-index 1
 setw -g pane-base-index 1
@@ -29,7 +31,16 @@ set -sg escape-time 1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-military-time true
+set -g @dracula-git-no-repo-message "N/A"
+set -g @dracula-fixed-location "Mexico City"
  
+set -g @dracula-plugins "git weather time"
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
