--- a/.config/doublecmd/session.ini
+++ b/.config/doublecmd/session.ini
@@ -38,13 +38,13 @@ cbAlwaysOnTop_Checked=0
 Screen_PixelsPerInch=96
 
 [TfrmFileProperties(1600x900)]
-TfrmFileProperties_Height=840
-TfrmFileProperties_Width=1596
+TfrmFileProperties_Height=836
+TfrmFileProperties_Width=1592
 Screen_PixelsPerInch=96
 
 [TfrmViewer(1600x900)]
 TfrmViewer_Height=875
-TfrmViewer_Width=958
+TfrmViewer_Width=798
 TfrmViewer_Left=0
 TfrmViewer_Top=23
 TfrmViewer_WindowState=wsNormal
@@ -62,4 +62,40 @@ Screen_PixelsPerInch=96
 TfrmDescrEdit_Height=300
 TfrmDescrEdit_WindowState=wsNormal
 TfrmDescrEdit_Width=400
+Screen_PixelsPerInch=96
+
+[TfrmMain(1366x768)]
+nbConsole_Height=54
+seLogWindow_Height=51
+TreePanel_Width=121
+Screen_PixelsPerInch=96
+
+[TfrmMain(1920x1080)]
+nbConsole_Height=54
+seLogWindow_Height=51
+TreePanel_Width=121
+Screen_PixelsPerInch=96
+
+[TfrmViewer(1920x1080)]
+TfrmViewer_Height=1078
+TfrmViewer_Width=958
+TfrmViewer_Left=0
+TfrmViewer_Top=0
+TfrmViewer_WindowState=wsNormal
+Screen_PixelsPerInch=96
+
+[TfrmFileProperties(1366x768)]
+TfrmFileProperties_Height=471
+TfrmFileProperties_Width=458
+Screen_PixelsPerInch=96
+
+[TfrmViewer(1366x768)]
+TfrmViewer_Height=749
+TfrmViewer_Width=681
+TfrmViewer_Left=0
+TfrmViewer_Top=17
+TfrmViewer_WindowState=wsNormal
+Screen_PixelsPerInch=96
+
+[TfrmExtractDlg(1366x768)]
 Screen_PixelsPerInch=96
