Changes to doublecmd

--- a/.config/doublecmd/session.ini
+++ b/.config/doublecmd/session.ini
@@ -38,15 +38,15 @@ cbAlwaysOnTop_Checked=0
 Screen_PixelsPerInch=96
 
 [TfrmFileProperties(1600x900)]
-TfrmFileProperties_Height=840
-TfrmFileProperties_Width=1596
+TfrmFileProperties_Height=836
+TfrmFileProperties_Width=1592
 Screen_PixelsPerInch=96
 
 [TfrmViewer(1600x900)]
-TfrmViewer_Height=875
+TfrmViewer_Height=844
 TfrmViewer_Width=958
 TfrmViewer_Left=0
-TfrmViewer_Top=23
+TfrmViewer_Top=25
 TfrmViewer_WindowState=wsNormal
 Screen_PixelsPerInch=96
 
@@ -62,4 +62,21 @@ Screen_PixelsPerInch=96
 TfrmDescrEdit_Height=300
 TfrmDescrEdit_WindowState=wsNormal
 TfrmDescrEdit_Width=400
+Screen_PixelsPerInch=96
+
+[TfrmOpenWith(1600x900)]
+Screen_PixelsPerInch=96
+
+[TfrmMain(1920x1080)]
+nbConsole_Height=54
+seLogWindow_Height=51
+TreePanel_Width=121
+Screen_PixelsPerInch=96
+
+[TfrmViewer(1920x1080)]
+TfrmViewer_Height=458
+TfrmViewer_Width=651
+TfrmViewer_Left=930
+TfrmViewer_Top=427
+TfrmViewer_WindowState=wsNormal
 Screen_PixelsPerInch=96
