--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,8 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-military-time true
 set -g @dracula-git-no-repo-message "N/A"
-set -g @dracula-fixed-location "Mexico City"
+set -g @dracula-fixed-location "Madrid"
+set -g @dracula-show-fahrenheit false
  
 set -g @dracula-plugins "git weather time"
 
