Some changes in Hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ $terminal = terminator
 $fileManager = nemo
 $browser = brave-browser
 $editor = emacs-gtk+x11
-#$wallpaper = nitrogen --set-zoom-fill --random ~/fondos/NASA
+$wallpaper = nitrogen --set-zoom-fill --random ~/fondos/NASA
 $menu = rofi -modi run,drun -show drun -lines 3
 $powerMenu = rofi -modi p:~/.local/bin/rofi-power-menu -show p -font 'Inconsolata Medium 12'
 
@@ -52,7 +52,8 @@ $powerMenu = rofi -modi p:~/.local/bin/rofi-power-menu -show p -font 'Inconsolat
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar 
+exec-once = $wallpaper
 exec-once = $browser
 exec-once = xss-lock -- i3lock -n -i fondos/lockscreen.png
 exec-once = flatpak run org.signal.Signal
@@ -60,8 +61,8 @@ exec-once = doublecmd
 exec-once = autokey-gtk
 exec-once = copyq --start-server
 exec-once = flatpak run com.spotify.Client
+exec-once = AppImageLauncher Applications/Ferdium-linux-Portable-7.1.1-x86_64_d214d3c63c012e044fa1c22429a34d58.AppImage
 exec-once = syncthing --no-browser
-exec-once = AppImageLauncher Applications/Joplin.AppImage
 exec-once = nextcloud
 
 
@@ -266,6 +267,10 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod CTRL, Q, exec, nvim-qt ~/.config/hypr/hyprland.conf
 
+# Workspace commands
+bind = $mainMod, SPACE, layoutmsg, orientationcycle
+bind = $mainMod SHIFT, SPACE, layoutmsg, mfact 0.0
+
 # Window commands
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
@@ -293,7 +298,7 @@ bind = , left, resizeactive, -10 0
 bind = , right, resizeactive, 10 0
 bind = , up, resizeactive, 0 -10
 bind = , down, resizeactive, 0 10
-bind = , RETURN, submap, reset
+bind = , ESCAPE, submap, reset
 submap = reset
 
 # Promote to Master
@@ -369,7 +374,6 @@ windowrule = float, title:Qalculate!
 windowrule = float, ^(.*copyq.*)$
 
 # Allocate windows
-windowrule = workspace 2, ^(.*Signal.*)$
-windowrule = workspace 3, ^(.*browser.*)$
-windowrule = workspace 9, ^(.*Spotify.*)$
-
+windowrule = workspace 2 silent, ^(.*Signal.*)$
+windowrule = workspace 3 silent, ^(.*browser.*)$
+windowrule = workspace 9 silent, ^(.*Spotify.*)$
