--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,7 +61,6 @@ exec-once = doublecmd
 exec-once = autokey-gtk
 exec-once = copyq --start-server
 exec-once = flatpak run com.spotify.Client
-exec-once = AppImageLauncher Applications/Ferdium-linux-Portable-7.1.1-x86_64_d214d3c63c012e044fa1c22429a34d58.AppImage
 exec-once = syncthing --no-browser
 exec-once = nextcloud
 
@@ -229,7 +228,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Screen and clipboard capturing
 bind = , Print, exec, flameshot gui
-bind = $mainMod, ESCAPE, exec, copyq show
+bind = $mainMod, Escape, exec, copyq show
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -250,26 +249,26 @@ bindl = $mainMod, XF86AudioPlay, exec, ~/scripts/audio-device-switch.sh
 bindl = , XF86HomePage, exec, qutebrowser
 
 # Launch the menus
-bind = MOD5, SPACE, exec, $menu
-bind = MOD5 SHIFT, SPACE, exec, $powerMenu
+bind = Mod5, Space, exec, $menu
+bind = Mod5 Shift, Space, exec, $powerMenu
 
 # Terminal
 bind = $mainMod, T, exec, $terminal
 
 # File managers
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, E, exec, doublecmd
+bind = $mainMod Shift, E, exec, doublecmd
 
 # Kill active window
 bind = $mainMod, C, killactive,
 
 # Hyprland bindings
 bind = $mainMod, Q, exit,
-bind = $mainMod CTRL, Q, exec, nvim-qt ~/.config/hypr/hyprland.conf
+bind = $mainMod Ctrl, Q, exec, nvim-qt ~/.config/hypr/hyprland.conf
 
 # Workspace commands
-bind = $mainMod, SPACE, layoutmsg, orientationcycle
-bind = $mainMod SHIFT, SPACE, layoutmsg, mfact 0.0
+bind = $mainMod, Space, layoutmsg, orientationcycle
+bind = $mainMod Shift, SPACE, layoutmsg, mfact 0.0
 
 # Window commands
 bind = $mainMod, V, togglefloating,
@@ -279,32 +278,32 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, M, fullscreen, 1
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, Left, movefocus, l
+bind = $mainMod, Right, movefocus, r
+bind = $mainMod, Up, movefocus, u
+bind = $mainMod, Down, movefocus, d
 
 # Move window to another position
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
+bind = $mainMod Shift, Left, movewindow, l
+bind = $mainMod Shift, Right, movewindow, r
+bind = $mainMod Shift, Up, movewindow, u
+bind = $mainMod Shift, Down, movewindow, d
 
 # Resize the active window
 bind = $mainMod, R, submap, resize
 submap = resize
 
-bind = , left, resizeactive, -10 0
-bind = , right, resizeactive, 10 0
-bind = , up, resizeactive, 0 -10
-bind = , down, resizeactive, 0 10
-bind = , ESCAPE, submap, reset
+bind = , Left, resizeactive, -10 0
+bind = , Right, resizeactive, 10 0
+bind = , Up, resizeactive, 0 -10
+bind = , Down, resizeactive, 0 10
+bind = , Escape, submap, reset
 submap = reset
 
 # Promote to Master
-bind = $mainMod, TAB, layoutmsg, rollnext
-bind = $mainMod SHIFT, TAB, layoutmsg, rollprevious
-bind = $mainMod SHIFT, C, layoutmsg, swapwithmaster
+bind = $mainMod, Tab, layoutmsg, rollnext
+bind = $mainMod Shift, Tab, layoutmsg, rollprevious
+bind = $mainMod Shift, C, layoutmsg, swapwithmaster
 
 # Teleparty mode
 bind = $mainMod, P, resizeactive, exact 75% 100%
@@ -322,20 +321,20 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod Shift, 1, movetoworkspace, 1
+bind = $mainMod Shift, 2, movetoworkspace, 2
+bind = $mainMod Shift, 3, movetoworkspace, 3
+bind = $mainMod Shift, 4, movetoworkspace, 4
+bind = $mainMod Shift, 5, movetoworkspace, 5
+bind = $mainMod Shift, 6, movetoworkspace, 6
+bind = $mainMod Shift, 7, movetoworkspace, 7
+bind = $mainMod Shift, 8, movetoworkspace, 8
+bind = $mainMod Shift, 9, movetoworkspace, 9
+bind = $mainMod Shift, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod Shift, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -347,11 +346,11 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Power bindings
 bind = $mainMod, L, exec, xset s activate 
-bind = , PAUSE, exec, systemctl suspend
-bind = SHIFT, PAUSE, exec, systemctl hibernate
+bind = , Pause, exec, systemctl suspend
+bind = Shift, Pause, exec, systemctl hibernate
 
 ##############################
-### WINDOWS AND WORKSPACES ###
+### WINDOWs anD WORKSPACES ###
 ##############################
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
@@ -376,4 +375,5 @@ windowrule = float, ^(.*copyq.*)$
 # Allocate windows
 windowrule = workspace 2 silent, ^(.*Signal.*)$
 windowrule = workspace 3 silent, ^(.*browser.*)$
+windowrule = workspace 6, ^(.*edge.*)$
 windowrule = workspace 9 silent, ^(.*Spotify.*)$
