I had used rollprevious instead of rollprev in Hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -302,7 +302,7 @@ submap = reset
 
 # Promote to Master
 bind = $mainMod, Tab, layoutmsg, rollnext
-bind = $mainMod Shift, Tab, layoutmsg, rollprevious
+bind = $mainMod Shift, Tab, layoutmsg, rollprev
 bind = $mainMod Shift, C, layoutmsg, swapwithmaster
 
 # Teleparty mode
